version 1.3
	* Increased speed of HTML report by filtering the files read
	  in to determine cyclomatic complexity numbers on.
	* Changed the format of the XML reports to something that
	  is hopefully easier to use and more natural.  This
	  unfortunately breaks backward compatability.

version 1.2
	* Fix a bug that caused the XML reports to be invalid XML
	  (they were missing the </package> tag).
	* Use Java 1.4 pattern matching and remove Jakarta ORO.

version 1.1
	* Fix a bug in the syntax highlighting code of the HTML report
	  generation.  Previously, the highlighting for single quotes
	  containing "\\" would not end correctly.
	* Check the third party jars into CVS using the correct CVS
	  substition flag (binary, not ASCII).
	* Temporary files created by the instrument ant task and merge
	  ant task are now deleted after the ant task finishes.
	* Switch the instrumentation classes to use ASM instead of
	  Apache BCEL.  There are three benefits to this:
	  1. BCEL was throwing exceptions with some source code compiled
	     with JDK 1.5--ASM works fine.
	  2. ASM is licensed under the revised BSD license, which
	     is compatable with the GPL, which allows us to remove
	     the questionable exception for BCEL.
	  3. Instrumentation is about 5 times faster with ASM than BCEL.
	* Modify the HTML reports so that classes without line number
	  information will appear as "Not Applicable."  This includes
	  skeleton classes, stub classes, interfaces, or anything not
	  compiled with debug=true.
	* Fix bug #1151777 with a patch from Jeremy Thomerson.
	  Previously we were not escaping some characters correctly in the
	  generated XML coverage report (specificially < and >).
	* Set the class-path in the cobertura.jar manifest file correctly.
	* Fill feature request #1151779 with a patch from Jeremy Thomerson.
	  This changes the structure of the XML report so that <classes> are
	  enclosed inside <packages>.

version 1.0