@@ -1,4 +1,4 @@
 cobertura-instrument=net.sourceforge.cobertura.ant.InstrumentTask
 cobertura-merge=net.sourceforge.cobertura.ant.MergeTask
-cobertura-report=net.sourceforge.cobertura.ant.CoverageReportTask
+cobertura-report=net.sourceforge.cobertura.ant.ReportTask
 cobertura-check=net.sourceforge.cobertura.ant.CheckTask
